--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <script defer src="./script.js"></script>
   </head>
   <body>
-    <!-- video -->
-    <video id="video" controls height="360" width="640"></video>
-    <!-- Button -->
     <div class="button-container">
       <button class="button" id="btn-select">
         Select <br /><span class="btn-text">Select a screen for PiP</span>
@@ -23,5 +20,10 @@
         Start<br /><span class="btn-text">PiP</span>
       </button>
     </div>
+
+    <!-- video -->
+    <video id="video" controls height="360" width="640"></video>
+
+    <div class="error"></div>
   </body>
 </html>
